--- a/index.html
+++ b/index.html
@@ -211,6 +211,18 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.02082" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</span> 
+      <br>Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, <b>Yongqi Li</b>, Shenggui Li, Kai Xu, Liqiang Nie, Zhaopeng Tu, Yang You
+    <br>ICML 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 <table>
   <tbody>
@@ -253,18 +265,6 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 </table>
 	
 	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2402.02082" 
-			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">GliDe with a CaPE: A Low-Hassle Method to Accelerate Speculative Decoding</span> 
-      <br>Cunxiao Du, Jing Jiang, Xu Yuanchen, Jiawei Wu, Sicheng Yu, <b>Yongqi Li</b>, Shenggui Li, Kai Xu, Liqiang Nie, Zhaopeng Tu, Yang You
-    <br>Arxiv 2024 (Full)
-  </td>
-  </tr>
- </tbody>
-</table>
 	
 <table>
   <tbody>
