--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
-	
+
+    <b>16 May 2024</b><br>
+    <span class="easylink">
+    Three papers are accepted into ACL 2024 main and findings!
+    </span><br><br>	
+
+	    
     <b>2 May 2024</b><br>
     <span class="easylink">
     Our paper (<a href="https://arxiv.org/abs/2402.02082" target="_blank">Arxiv</a>) about LLM acceleration is accepted by ICML 2024.  Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao</a>!
@@ -211,6 +217,49 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.10805" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Generative Cross-Modal Retrieval: Memorizing Images in Multimodal Language Models for Retrieval and Beyond</span> 
+      <br><b>Yongqi Li</b>, Wenjie Wang, Leigang Qu, Liqiang Nie, Wenjie Li, Tat-Seng Chua
+    <br>ACL 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>	
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2402.10769" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Distillation Enhanced Generative Retrieval</span> 
+      <br><b>Yongqi Li</b>, Zhen Zhang, Wenjie Wang, Liqiang Nie, Wenjie Li, Tat-Seng Chua
+    <br>ACL 2024 Findings (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2401.07851" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Unlocking efficiency in large language model inference: A comprehensive survey of speculative decoding</span> 
+      <br>Heming Xia, Zhe Yang, Qingxiu Dong, Peiyi Wang, <b>Yongqi Li</b>, Tao Ge, Tianyu Liu, Wenjie Li, Zhifang Sui
+    <br>ACL 2024 Findings (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
+	
 <table>
   <tbody>
   <tr>
@@ -231,48 +280,6 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">A Survey of Generative Search and Recommendation in the Era of Large Language Models</span> 
       <br><b>Yongqi Li</b>,  Xinyu Lin, Wenjie Wang, Fuli Feng, Liang Pang, Wenjie Li, Liqiang Nie, Xiangnan He, Tat-Seng Chua
-    <br>Arxiv 2024 (Full)
-  </td>
-  </tr>
- </tbody>
-</table>
-
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2402.10805" 
-			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Generative Cross-Modal Retrieval: Memorizing Images in Multimodal Language Models for Retrieval and Beyond</span> 
-      <br><b>Yongqi Li</b>, Wenjie Wang, Leigang Qu, Liqiang Nie, Wenjie Li, Tat-Seng Chua
-    <br>Arxiv 2024 (Full)
-  </td>
-  </tr>
- </tbody>
-</table>	
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2402.10769" 
-			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Distillation Enhanced Generative Retrieval</span> 
-      <br><b>Yongqi Li</b>, Zhen Zhang, Wenjie Wang, Liqiang Nie, Wenjie Li, Tat-Seng Chua
-    <br>Arxiv 2024 (Full)
-  </td>
-  </tr>
- </tbody>
-</table>
-	
-	
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2401.07851" 
-			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Unlocking efficiency in large language model inference: A comprehensive survey of speculative decoding</span> 
-      <br>Heming Xia, Zhe Yang, Qingxiu Dong, Peiyi Wang, <b>Yongqi Li</b>, Tao Ge, Tianyu Liu, Wenjie Li, Zhifang Sui
     <br>Arxiv 2024 (Full)
   </td>
   </tr>
