--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <h2>News</h2><br>
     <font size="3px">
 
+
+    <b>17 May 2024</b><br>
+    <span class="easylink">
+    Our paper about generative recommendation is accepted into KDD 2024!
+    </span><br><br>	
+
+	    
     <b>16 May 2024</b><br>
     <span class="easylink">
     Three papers are accepted into ACL 2024 main and findings!
@@ -217,7 +224,19 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
-
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2310.06491" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">A Multi-facet Paradigm to Bridge Large Language Model and Recommendation </span> 
+      <br>Xinyu Lin, Wenjie Wang, <b>Yongqi Li</b>, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
+    <br>KDD 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
@@ -340,18 +359,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
  </tbody>
 </table>
 
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2310.06491" 
-			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">A Multi-facet Paradigm to Bridge Large Language Model and Recommendation </span> 
-      <br>Xinyu Lin, Wenjie Wang, <b>Yongqi Li</b>, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
-    <br>Arxiv 2023 (Full)
-  </td>
-  </tr>
- </tbody>
-</table>
+
 	
 <table>
   <tbody>
