--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/2310.06491" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">A Multi-facet Paradigm to Bridge Large Language Model and Recommendation </span> 
+    <td><span class="title">Bridging Items and Language: A Transition Paradigm for Large Language Model-Based Recommendation </span> 
       <br>Xinyu Lin, Wenjie Wang, <b>Yongqi Li</b>, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
     <br>KDD 2024 (Full)
   </td>
