--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+	    
+    <b>17 Jul 2024</b><br>
+    <span class="easylink">
+    Our paper about generative recommendation is accepted into CIKM 2024!
+    </span><br><br>	
 
 
     <b>17 May 2024</b><br>
@@ -224,6 +229,19 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2405.07314" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Learnable Item Tokenization for Generative Recommendation </span> 
+      <br>Wenjie Wang, Honghui Bao, Xinyu Lin, Jizhi Zhang, <b>Yongqi Li</b>, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
+    <br>CIKM 2024 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
@@ -593,7 +611,8 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
-<table><tbody><tr><td>
+<table><tbody><tr><td> 
+  Program Committee Member and Reviewer for <span class="title">LREC-COLING 2024</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM CIKM 2023</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
