--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+
+
+    <b>20 Sep 2024</b><br>
+    <span class="easylink">
+    Our paper about tool learning is accepted into EMNLP 2024 findings!  Congratulations to <a href="https://scholar.google.com/citations?user=V1bNf2wAAAAJ" target="_blank">Qiancheng</a>!
+    </span><br><br>	
+	    
 	    
     <b>17 Jul 2024</b><br>
     <span class="easylink">
@@ -226,9 +233,22 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Papers===========================================!-->
 <div id="papers">
-<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
+<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2>  (*Corresponding author)
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2406.17465" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Enhancing Tool Retrieval with Iterative Feedback from Large Language Models </span> 
+      <br>Qiancheng Xu, <b>Yongqi Li*</b>, Heming Xia, Wenjie Li
+    <br>EMNLP 2024 Findings (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
@@ -584,6 +604,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td> 
+  Area Chair for <span class="title">COLING 2025</span><br><br>
   Program Committee Member and Reviewer for <span class="title">LREC-COLING 2024</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM CIKM 2023</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
