--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Papers===========================================!-->
 <div id="papers">
-<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2>  (*Corresponding author)
+<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
 <table>
@@ -242,7 +242,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="https://arxiv.org/abs/2406.17465" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Enhancing Tool Retrieval with Iterative Feedback from Large Language Models </span> 
-      <br>Qiancheng Xu, <b>Yongqi Li*</b>, Heming Xia, Wenjie Li
+      <br>Qiancheng Xu, <b>Yongqi Li</b>, Heming Xia, Wenjie Li
     <br>EMNLP 2024 Findings (Full)
   </td>
   </tr>
