--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> Postdoctoral Fellow, <span class="title">The Hong Kong Polytechnic University</span>, Feb 2024 - now <br>
+    <td> Research Assistant Professor, <span class="title">The Hong Kong Polytechnic University</span>, Oct 2024 - now <br>
+		</td></tr></tbody>
+</table>
+<table>
+  <tbody><tr>
+    <td> Postdoctoral Fellow, <span class="title">The Hong Kong Polytechnic University</span>, Feb 2024 - Sep 2024 <br>
 			Working with Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
 		</td></tr></tbody>
 </table>
