--- a/index.html
+++ b/index.html
@@ -226,26 +226,26 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 </table>
 <table>
   <tbody><tr>
-    <td> Postdoctoral Fellow, <span class="title">The Hong Kong Polytechnic University</span>, Feb 2024 - Sep 2024 <br>
-			Working with Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
+    <td> Postdoctoral Fellow, <span class="title">The Hong Kong Polytechnic University</span> <br>
+	Feb 2024 - Sep 2024, Working with Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> Visiting Student, <span class="title">National University of Singapore</span>, Next++ Lab, Jul 2023 - Jan 2024 <br>
-			Working with Prof. <a href="https://scholar.google.com.hk/citations?user=Z9DWCBEAAAAJ&hl=zh-CN" target="_blank">Tat-Seng Chua</a>
+    <td> Visiting Student, <span class="title">National University of Singapore</span>, Next++ Lab <br>
+	Jul 2023 - Jan 2024, Working with Prof. <a href="https://scholar.google.com.hk/citations?user=Z9DWCBEAAAAJ&hl=zh-CN" target="_blank">Tat-Seng Chua</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern, <span class="title">Microsoft Research Asia</span>, Apr 2022 - Jun 2023 <br>
-			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
+    <td> Research Intern, <span class="title">Microsoft Research Asia</span> <br>
+		Apr 2022 - Jun 2023, Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="https://scholar.google.com.hk/citations?user=G-V1VpwAAAAJ&hl=en&oi=ao" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
 <table>
   <tbody><tr>
-    <td> Research Intern, <span class="title">Shandong University</span>, July 2017 - Dec 2020 <br>
-			Working with <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+    <td> Research Intern, <span class="title">Shandong University</span> <br>
+			July 2017 - Dec 2020, Working with <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
 <!-- ============================Experiences===========================================!-->
