--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> Research Assistant Professor, <span class="title">The Hong Kong Polytechnic University</span>, Oct 2024 - now <br>
+    <td> Research Assistant Professor, <span class="title">The Hong Kong Polytechnic University</span> <br>
+    Oct 2024 - now
 		</td></tr></tbody>
 </table>
 <table>
