--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    
     <b>28 Sep 2024</b><br>
     <span class="easylink">
-    I work as a Research Assistant Professor at the Department of Computing at the Hong Kong Polytechnic University.
+    I work as a Research Assistant Professor in the Department of Computing at the Hong Kong Polytechnic University.
     </span><br><br>	
 	    
     <b>27 Sep 2024</b><br>
