--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-  Guest Editor for Frontiers in Big Data <br><br>
+  Guest Editor for <span class="title">Frontiers in Big Data</span> <br><br>
   Area Chair for <span class="title">COLING 2025</span><br><br>
   Program Committee Member and Reviewer for <span class="title">LREC-COLING 2024</span><br><br>
   Program Committee Member and Reviewer for <span class="title">ACM CIKM 2023</span><br><br>
