--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>9 Dec 2024 2024</b><br>
     <span class="easylink">
-    The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And Our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025.
+    The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025.
     </span><br><br>	
 	    
     <b>28 Sep 2024</b><br>
@@ -268,7 +268,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Personalized Large Language Model Assistant with Evolving Conditional Memory </span> 
       <br>Ruifeng Yuan, Shichao Sun, <b>Yongqi Li</b>, Zili Wang, Ziqiang Cao, Wenjie Li
-    <br>Coling 2024 Findings (tutorial)
+    <br>Coling 2025 (Full)
   </td>
   </tr>
  </tbody>
@@ -281,7 +281,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Speculative Decoding for Efficient LLM Inference </span> 
       <br>Heming Xia, Wenjie Li Heming Xia, Cunxiao Du, <b>Yongqi Li</b>, Qian Liu and Wenjie Li
-    <br>Coling 2024 Findings (tutorial)
+    <br>Coling 2025 (Tutorial)
   </td>
   </tr>
  </tbody>
