--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>News</h2><br>
     <font size="3px">
 
-    <b>9 Dec 2024 2024</b><br>
+    <b>9 Dec 2024</b><br>
     <span class="easylink">
     The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025.
     </span><br><br>	
@@ -280,7 +280,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Speculative Decoding for Efficient LLM Inference </span> 
-      <br>Heming Xia, Wenjie Li Heming Xia, Cunxiao Du, <b>Yongqi Li</b>, Qian Liu and Wenjie Li
+      <br>Heming Xia, Cunxiao Du, <b>Yongqi Li</b>, Qian Liu and Wenjie Li
     <br>Coling 2025 (Tutorial)
   </td>
   </tr>
@@ -771,7 +771,7 @@ Teaching Assistant, 2023 Spring, COMP5423 <span class="title">Natural Language P
 
 <table><tbody><tr><td>
   <span class="title">Explainable Reasoning over Knowledge Graph Paths for Recommendation</span> &nbsp;&nbsp; 
-  <br> - Shandong University, Augest 11, 2018 (invited by Prof. Nie Liqiang)
+  <br> - Shandong University, August 11, 2018 (invited by Prof. Nie Liqiang)
 </td></tr></tbody></table>
 
 <h2 style="CLEAR: both;">Professional Services</h2>
