--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>9 Dec 2024</b><br>
     <span class="easylink">
-    The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025 (<a href="https://speculative-decoding.github.io/" target="_blank">website</a>.
+    The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025 (Please visit the <a href="https://speculative-decoding.github.io/" target="_blank">website</a> for slides and involved papers if you are interested).
     </span><br><br>	
 	    
     <b>28 Sep 2024</b><br>
