--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>20 Jan 2025</b><br>
+    <span class="easylink">
+    Our paper "Large Language Models Empowered Personalized Web Agents" is accepted by TheWebConference 2025. Congratulations to <a href="https://hongrucai.github.io/" target="_blank">Hongru</a>!.
+    </span><br><br>	
+	    
     <b>9 Dec 2024</b><br>
     <span class="easylink">
     The paper "Personalized Large Language Model Assistant with Evolving Conditional Memory" is accepted by Coling 2025. And our tutorial "Speculative Decoding for Efficient LLM Inference" is also accepted into Coling 2025 (Please visit the <a href="https://speculative-decoding.github.io/" target="_blank">website</a> for slides and involved papers if you are interested).
