--- a/index.html
+++ b/index.html
@@ -269,6 +269,19 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2410.17236" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large Language Models Empowered Personalized Web Agents </span> 
+      Hongru Cai, <b>Yongqi Li</b>, Wenjie Wang, Fengbin Zhu, Xiaoyu Shen, Wenjie Li, Tat-Seng Chua
+    <br>Coling 2025 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Personalized Large Language Model Assistant with Evolving Conditional Memory </span> 
