--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <h2>News</h2><br>
     <font size="3px">
 
+
+    <b>23 Jan 2025</b><br>
+    <span class="easylink">
+    We have three papers accepted by ICLR 2025!
+    </span><br><br>	
+	    
+	    
     <b>20 Jan 2025</b><br>
     <span class="easylink">
     Our paper "Large Language Models Empowered Personalized Web Agents" is accepted by TheWebConference 2025. Congratulations to <a href="https://hongrucai.github.io/" target="_blank">Hongru</a>!.
@@ -266,6 +273,46 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2410.06916" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">SWIFT: On-the-Fly Self-Speculative Decoding for LLM Inference Acceleration</span> 
+      <br>Heming Xia, <b>Yongqi Li</b>, Jun Zhang, Cunxiao Du, Wenjie Li
+    <br>ICLR 2025 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>	
+	
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2410.05165" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Efficient Inference for Large Language Model-based Generative Recommendation </span> 
+      <br>Xinyu Lin, Chaoqun Yang, Wenjie Wang, <b>Yongqi Li</b>, Cunxiao Du, Fuli Feng, See-Kiong Ng, Tat-Seng Chua
+    <br>ICLR 2025 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>	
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2406.05814" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">TIGeR: Unifying Text-to-Image Generation and Retrieval with Large Multimodal Models </span> 
+      <br>Leigang Qu, Haochuan Li, Tan Wang, Wenjie Wang, <b>Yongqi Li</b>, Liqiang Nie, Tat-Seng Chua
+    <br>ICLR 2025 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
