--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
-
+    <b>28 Feb 2025</b><br>
+    <span class="easylink">
+    We have one paper accepted by CVPR 2025!
+    </span><br><br>	
+	    
     <b>23 Jan 2025</b><br>
     <span class="easylink">
     We have three papers accepted by ICLR 2025!
@@ -270,9 +274,23 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Papers===========================================!-->
 <div id="papers">
-<h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
+<h2 style="CLEAR: both">Publications<a href="" target="_blank"></a></h2> *Corresponding author
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2410.06916" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Interleaved-Modal Chain-of-Thought</span> 
+      <br>Jun Gao, <b>Yongqi Li</b>, Ziqiang Cao, Wenjie Li
+    <br>CVPR 2025 (Full)
+  </td>
+  </tr>
+ </tbody>
+</table>	
+	
+	
 	
 <table>
   <tbody>
