--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 
 <!-- ============================Papers===========================================!-->
 <div id="papers">
-<h2 style="CLEAR: both">Publications<a href="" target="_blank"></a></h2> *Corresponding author
+<h2 style="CLEAR: both">Publications<a href="" target="_blank"></a></h2> (*Corresponding author)
 </br>
 
 <table>
@@ -283,7 +283,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="https://arxiv.org/abs/2410.06916" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Interleaved-Modal Chain-of-Thought</span> 
-      <br>Jun Gao, <b>Yongqi Li</b>, Ziqiang Cao, Wenjie Li
+      <br>Jun Gao, <b>Yongqi Li</b>*, Ziqiang Cao*, Wenjie Li
     <br>CVPR 2025 (Full)
   </td>
   </tr>
@@ -298,7 +298,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="https://arxiv.org/abs/2410.06916" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">SWIFT: On-the-Fly Self-Speculative Decoding for LLM Inference Acceleration</span> 
-      <br>Heming Xia, <b>Yongqi Li</b>, Jun Zhang, Cunxiao Du, Wenjie Li
+      <br>Heming Xia, <b>Yongqi Li</b>*, Jun Zhang, Cunxiao Du, Wenjie Li
     <br>ICLR 2025 (Full)
   </td>
   </tr>
@@ -337,7 +337,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="https://arxiv.org/abs/2410.17236" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large Language Models Empowered Personalized Web Agents </span> 
-      <br>Hongru Cai, <b>Yongqi Li</b>, Wenjie Wang, Fengbin Zhu, Xiaoyu Shen, Wenjie Li, Tat-Seng Chua
+      <br>Hongru Cai, <b>Yongqi Li</b>*, Wenjie Wang*, Fengbin Zhu, Xiaoyu Shen, Wenjie Li, Tat-Seng Chua
     <br>TheWebConference 2025 (Full)
   </td>
   </tr>
@@ -350,7 +350,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Personalized Large Language Model Assistant with Evolving Conditional Memory </span> 
-      <br>Ruifeng Yuan, Shichao Sun, <b>Yongqi Li</b>, Zili Wang, Ziqiang Cao, Wenjie Li
+      <br>Ruifeng Yuan, Shichao Sun, <b>Yongqi Li</b>*, Zili Wang, Ziqiang Cao, Wenjie Li
     <br>Coling 2025 (Full)
   </td>
   </tr>
@@ -376,7 +376,7 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
     <td class="left"><a href="https://arxiv.org/abs/2406.17465" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Enhancing Tool Retrieval with Iterative Feedback from Large Language Models </span> 
-      <br>Qiancheng Xu, <b>Yongqi Li</b>, Heming Xia, Wenjie Li
+      <br>Qiancheng Xu, <b>Yongqi Li</b>*, Heming Xia, Wenjie Li
     <br>EMNLP 2024 Findings (Full)
   </td>
   </tr>
