--- a/index.html
+++ b/index.html
@@ -739,17 +739,14 @@ Our team is looking for highly motivated PhD/master/undergraduate students to co
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
   Guest Editor for <span class="title">Frontiers in Big Data</span> <br><br>
-  Area Chair for <span class="title">COLING 2025</span><br><br>
-  Program Committee Member and Reviewer for <span class="title">LREC-COLING 2024</span><br><br>
-  Program Committee Member and Reviewer for <span class="title">ACM CIKM 2023</span><br><br>
-  Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
+  Area Chair for <span class="title">COLING 2025</span><br><be>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Multimedia (TMM)</span><br><br>
+  Invited Reviewer for <span class="title">ACM Transactions on Multimedia Computing, Communications, and Applications (TOMM)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</span><br><br>
   Invited Reviewer for <span class="title">Information Processing & Management (IP&M)</span><br><br>
   Invited Reviewer for <span class="title">Information Sciences</span><br><br>
-  Invited Reviewer for <span class="title">ChinaMM (2020) </span>
 	
 </td></tr></tbody></table>
 
